--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended"
+    "config:recommended", "mergeConfidence:all-badges"
+  ],
+  "packageRules": [
+      {
+            "groupName": "Mend: high confidence minor and patch dependency updates",
+            "matchUpdateTypes": ["minor", "patch"],
+            "matchConfidence": ["very high", "high"]
+      }
   ]
 }
