--- a/birthday/backend/pyproject.toml
+++ b/birthday/backend/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "app"
+name = "ya0-birthday-backend"
 version = "0.1.0"
 description = ""
-authors = ["Admin <admin@example.com>"]
+authors = ["Yannis <yayouzer@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -47,6 +47,7 @@ exclude = ["venv", ".venv", "alembic"]
 [tool.ruff]
 target-version = "py310"
 exclude = ["alembic"]
+line-length = 140
 
 [tool.ruff.lint]
 select = [
