--- a/birthday/frontend/Dockerfile
+++ b/birthday/frontend/Dockerfile
@@ -1,5 +1,8 @@
 # Stage 0, "build-stage", based on Node.js, to build and compile the frontend
 FROM node:20 AS build-stage
+# FROM node:20-slim AS build-stage
+# FROM node:20-alpine AS build-stage
+# FROM node:22 AS build-stage
 
 WORKDIR /app
 
@@ -15,7 +18,7 @@ RUN npm run build
 
 
 # Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
-FROM nginx:1
+FROM nginx:1-alpine
 
 COPY --from=build-stage /app/dist/ /usr/share/nginx/html
 
