--- a/birthday/frontend/package.json
+++ b/birthday/frontend/package.json
@@ -11,28 +11,29 @@
     "generate-client": "openapi-ts --input ./openapi.json --output ./src/client --client axios --exportSchemas true && biome format --write ./src/client"
   },
   "dependencies": {
-    "@chakra-ui/icons": "2.2.4",
-    "@chakra-ui/react": "2.10.2",
-    "@emotion/react": "11.13.3",
-    "@emotion/styled": "11.13.0",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.28.14",
     "@tanstack/react-query-devtools": "^5.28.14",
-    "@tanstack/react-router": "1.65.0",
-    "axios": "1.7.7",
-    "form-data": "4.0.1",
-    "framer-motion": "11.11.8",
+    "@tanstack/react-router": "^1.65.0",
+    "axios": "^1.7.7",
+    "form-data": "^4.0.1",
+    "framer-motion": "^11.11.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "7.53.0",
-    "react-icons": "5.3.0"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "sharp":"^0.33.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.3",
+    "@biomejs/biome": "^1.9.3",
     "@hey-api/openapi-ts": "^0.53.0",
     "@playwright/test": "^1.45.2",
-    "@tanstack/router-devtools": "1.65.0",
-    "@tanstack/router-vite-plugin": "1.65.0",
+    "@tanstack/router-devtools": "^1.65.0",
+    "@tanstack/router-vite-plugin": "^1.65.0",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
